--- a/StaticResources/force-app/main/default/lwc/staticResourcesLWC/staticResourcesLWC.html
+++ b/StaticResources/force-app/main/default/lwc/staticResourcesLWC/staticResourcesLWC.html
@@ -1,3 +1,33 @@
 <template>
-    
+    <lightning-card title="Check Permission" icon-name="custom:custom11">
+        <div class="slds-var-p-around_small">
+            <template lwc:if={checkPermission}>
+                <p> You are authorized to view the message</p>
+            </template>
+            <template lwc:else>
+                <p> You are not authorized to view the message</p>
+            </template>
+        </div>
+    </lightning-card>
+    <lightning-card title="User Details" icon-name="custom:custom11">
+        <div class="slds-var-p-around_small">
+            <p class="slds-text-heading_medium">User Name: {userName}</p>
+        </div>
+    </lightning-card>
+    <lightning-card title="Custom Labels" icon-name="custom:custom10">
+        <div class="slds-var-p-around_small">
+            <p class="slds-text-heading_medium">{labels.greeting}</p>
+            <p class="slds-text-heading_medium">{labels.platform}</p>
+        </div>
+    </lightning-card>
+    <lightning-card title="Static Resources Demo" icon-name="custom:custom14">
+        <div class="slds-var-p-around_small">
+            <img src={mySalesForceLogo} />
+        </div>
+    </lightning-card>
+    <lightning-card title="Content Asset" icon-name="custom:custom19">
+        <div class="slds-var-p-around_small">
+            <img src={myContentAssetLogo} />
+        </div>
+    </lightning-card>
 </template>
