--- a/StaticResources/force-app/main/default/lwc/staticResourcesLWC/staticResourcesLWC.html
+++ b/StaticResources/force-app/main/default/lwc/staticResourcesLWC/staticResourcesLWC.html
@@ -1,4 +1,14 @@
 <template>
+    <lightning-card title="Third Party JS" icon-name="custom:custom2">
+        <div class="slds-var-p-around_small">
+            <p class="slds-text-heading_medium">{displayDate}</p>
+        </div>
+    </lightning-card>
+    <lightning-card title="Third Party CSS" icon-name="custom:custom14">
+        <div class="slds-var-p-around_small">
+            <p class="slds-text-heading_medium animate__delay-5s animate__bounceIn">{userName}</p>
+        </div>
+    </lightning-card>
     <lightning-card title="Check Permission" icon-name="custom:custom11">
         <div class="slds-var-p-around_small">
             <template lwc:if={checkPermission}>
